Refactor index.html to include React app directly

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>太空乘法防禦戰 | Space Multiplier</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <!-- 使用 Babel Standalone 處理 React 代碼 -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     
     <style>
@@ -47,8 +48,260 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="text/babel" data-presets="react,typescript" data-type="module">
-        import './App.tsx';
+    <script type="text/babel" data-presets="react,typescript">
+        /** 
+         * 這裡直接放入 App.tsx 的所有內容 
+         * 這樣可以確保在任何伺服器環境都能直接執行
+         */
+        import React, { useState, useEffect, useRef, useCallback, useMemo } from 'react';
+        import ReactDOM from 'react-dom/client';
+
+        // --- 1. 常數與設定 ---
+        const TOTAL_QUESTIONS = 10;
+        const HITS_TO_DESTROY = 7; 
+        const FIRE_RATE = 120;     
+
+        enum GameState { MENU, PLAYING, RESULT, HISTORY }
+
+        // --- 2. 背景組件 ---
+        const Background = () => {
+          const stars = useMemo(() => Array.from({ length: 120 }).map((_, i) => ({
+            id: i, x: Math.random() * 100, y: Math.random() * 100, size: Math.random() * 2 + 1, duration: Math.random() * 3 + 2
+          })), []);
+          return (
+            <div className="absolute inset-0 z-0 overflow-hidden pointer-events-none">
+              <div className="absolute inset-0 space-gradient opacity-60" />
+              {stars.map(s => (
+                <div key={s.id} className="absolute rounded-full bg-white opacity-40 animate-pulse"
+                  style={{ left: `${s.x}%`, top: `${s.y}%`, width: `${s.size}px`, height: `${s.size}px`, animationDuration: `${s.duration}s` }} />
+              ))}
+            </div>
+          );
+        };
+
+        // --- 3. 遊戲核心引擎 ---
+        const GameEngine = ({ level, onEnd, onQuit }) => {
+          const [questions, setQuestions] = useState([]);
+          const [currentIdx, setCurrentIdx] = useState(0);
+          const [shipX, setShipX] = useState(50);
+          const [bullets, setBullets] = useState([]);
+          const [targets, setTargets] = useState([]);
+          const [score, setScore] = useState(0);
+          const [shotsFired, setShotsFired] = useState(0);
+          const [isFiring, setIsFiring] = useState(false);
+
+          const containerRef = useRef(null);
+          const bulletsRef = useRef([]);
+          const targetsRef = useRef([]);
+          const lastFireTime = useRef(0);
+          const bulletIdRef = useRef(0);
+
+          useEffect(() => {
+            const poolA = level === 1 ? [1, 2, 3] : level === 2 ? [4, 5, 6] : [7, 8, 9];
+            const qs = Array.from({ length: TOTAL_QUESTIONS }).map(() => {
+              const a = poolA[Math.floor(Math.random() * poolA.length)];
+              const b = Math.floor(Math.random() * 9) + 1;
+              const ans = a * b;
+              let opts = [ans];
+              while (opts.length < 3) {
+                const w = (poolA[Math.floor(Math.random() * poolA.length)] * (Math.floor(Math.random() * 9) + 1));
+                if (!opts.includes(w)) opts.push(w);
+              }
+              return { a, b, answer: ans, options: opts.sort(() => Math.random() - 0.5) };
+            });
+            setQuestions(qs);
+          }, [level]);
+
+          useEffect(() => {
+            if (questions[currentIdx]) {
+              const q = questions[currentIdx];
+              const newTargets = q.options.map((val, i) => ({
+                id: i, value: val, x: 20 + i * 30, y: 15,
+                hp: val === q.answer ? HITS_TO_DESTROY : 1,
+                maxHp: val === q.answer ? HITS_TO_DESTROY : 1,
+                isCorrect: val === q.answer, destroyed: false, flash: 0
+              }));
+              setTargets(newTargets);
+              targetsRef.current = newTargets;
+            }
+          }, [currentIdx, questions]);
+
+          const update = useCallback(() => {
+            const now = Date.now();
+            if (isFiring && now - lastFireTime.current > FIRE_RATE) {
+              bulletsRef.current.push({ id: bulletIdRef.current++, x: shipX, y: 85 });
+              setShotsFired(s => s + 1);
+              lastFireTime.current = now;
+            }
+            bulletsRef.current = bulletsRef.current.map(b => ({ ...b, y: b.y - 3.5 })).filter(b => b.y > -5);
+            targetsRef.current = targetsRef.current.map(t => ({ ...t, flash: Math.max(0, t.flash - 0.1) }));
+            const hitBulletIds = new Set();
+            bulletsRef.current.forEach(b => {
+              targetsRef.current.forEach(t => {
+                if (!t.destroyed && Math.abs(b.x - t.x) < 7 && Math.abs(b.y - (t.y + 10)) < 10) {
+                  hitBulletIds.add(b.id);
+                  t.hp -= 1; t.flash = 1;
+                  if (t.hp <= 0) {
+                    t.destroyed = true;
+                    if (t.isCorrect) {
+                      setScore(s => s + 100);
+                      setTimeout(() => setCurrentIdx(prev => prev + 1), 600);
+                    } else {
+                      setScore(s => Math.max(0, s - 50));
+                      setTimeout(() => { t.destroyed = false; t.hp = t.maxHp; }, 1000);
+                    }
+                  }
+                }
+              });
+            });
+            bulletsRef.current = bulletsRef.current.filter(b => !hitBulletIds.has(b.id));
+            setBullets([...bulletsRef.current]);
+            setTargets([...targetsRef.current]);
+            if (currentIdx < TOTAL_QUESTIONS) requestAnimationFrame(update);
+            else {
+              const acc = shotsFired > 0 ? Math.round(((TOTAL_QUESTIONS * HITS_TO_DESTROY) / shotsFired) * 100) : 0;
+              onEnd(score, Math.min(100, acc));
+            }
+          }, [isFiring, shipX, currentIdx, shotsFired, score, onEnd]);
+
+          useEffect(() => {
+            const frame = requestAnimationFrame(update);
+            return () => cancelAnimationFrame(frame);
+          }, [update]);
+
+          useEffect(() => {
+            const handleMove = (e) => {
+              if (containerRef.current) {
+                const r = containerRef.current.getBoundingClientRect();
+                setShipX(Math.max(0, Math.min(100, ((e.clientX - r.left) / r.width) * 100)));
+              }
+            };
+            window.addEventListener('mousemove', handleMove);
+            window.addEventListener('mousedown', () => setIsFiring(true));
+            window.addEventListener('mouseup', () => setIsFiring(false));
+            return () => {
+              window.removeEventListener('mousemove', handleMove);
+              window.removeEventListener('mousedown', () => setIsFiring(true));
+              window.removeEventListener('mouseup', () => setIsFiring(false));
+            };
+          }, []);
+
+          const q = questions[currentIdx];
+          return (
+            <div ref={containerRef} className="relative w-full h-full cursor-none overflow-hidden">
+              <div className="absolute top-0 w-full p-8 flex justify-between items-start z-30 font-mono-tech">
+                <div className="bg-black/60 p-4 rounded-xl border border-blue-500/30">
+                  <div className="text-[10px] text-blue-400 uppercase">Progress</div>
+                  <div className="text-2xl">{currentIdx + 1} / {TOTAL_QUESTIONS}</div>
+                </div>
+                <div className="bg-black/80 px-12 py-6 rounded-[2rem] border-2 border-cyan-400">
+                  <div className="text-5xl font-black">{q ? `${q.a} × ${q.b}` : 'DONE'}</div>
+                </div>
+                <div className="bg-black/60 p-4 rounded-xl border border-blue-500/30 text-right">
+                  <div className="text-[10px] text-blue-400 uppercase">Score</div>
+                  <div className="text-2xl">{score}</div>
+                </div>
+              </div>
+              {targets.map(t => (
+                <div key={t.id} className={`absolute flex flex-col items-center transition-opacity duration-300 ${t.destroyed ? 'opacity-0 scale-150' : 'opacity-100'}`} style={{ left: `${t.x}%`, top: `${t.y + 10}%`, transform: 'translateX(-50%)' }}>
+                  {!t.destroyed && (
+                    <div className="w-16 h-1.5 bg-gray-950 rounded-full mb-3 border border-white/10 overflow-hidden">
+                      <div className="h-full bg-cyan-400" style={{ width: `${(t.hp/t.maxHp)*100}%` }} />
+                    </div>
+                  )}
+                  <div className={`w-32 h-32 flex items-center justify-center relative ${t.flash > 0 ? 'scale-110 brightness-150' : ''}`}>
+                     <svg viewBox="0 0 100 100" className="absolute inset-0 w-full h-full text-slate-700"><path fill="currentColor" d="M25,50 Q10,20 50,10 Q90,20 80,50 Q90,80 50,90 Q10,80 25,50" /></svg>
+                     <span className="relative z-10 text-4xl font-black font-mono-tech text-cyan-100">{t.value}</span>
+                  </div>
+                </div>
+              ))}
+              {bullets.map(b => (
+                <div key={b.id} className="absolute w-1.5 h-10 bg-cyan-400 rounded-full shadow-[0_0_15px_cyan]" style={{ left: `${b.x}%`, top: `${b.y}%`, transform: 'translateX(-50%)' }} />
+              ))}
+              <div className="absolute bottom-12" style={{ left: `${shipX}%`, transform: 'translateX(-50%)' }}>
+                <svg viewBox="0 0 40 60" className="w-16 h-20 drop-shadow-[0_0_15px_cyan]"><path d="M20,0 L40,45 L30,40 L20,60 L10,40 L0,45 Z" fill="#0f172a" stroke="#22d3ee" strokeWidth="2" /></svg>
+              </div>
+            </div>
+          );
+        };
+
+        const App = () => {
+          const [state, setState] = useState(GameState.MENU);
+          const [level, setLevel] = useState(1);
+          const [history, setHistory] = useState([]);
+          const [res, setRes] = useState({ score: 0, accuracy: 0 });
+
+          useEffect(() => {
+            const saved = localStorage.getItem('space_math_logs');
+            if (saved) setHistory(JSON.parse(saved));
+          }, []);
+
+          const handleEnd = (s, a) => {
+            const nh = [ { level, score: s, accuracy: a, timestamp: Date.now() }, ...history ].slice(0, 50);
+            setHistory(nh);
+            localStorage.setItem('space_math_logs', JSON.stringify(nh));
+            setRes({ score: s, accuracy: a });
+            setState(GameState.RESULT);
+          };
+
+          return (
+            <div className="relative w-screen h-screen bg-[#020617] text-white overflow-hidden">
+              <Background />
+              <div className="relative z-10 w-full h-full">
+                {state === GameState.MENU && (
+                  <div className="flex flex-col items-center justify-center h-full text-center">
+                    <h1 className="text-8xl font-black text-cyan-400 glow-text mb-16 tracking-tighter">SPACE MATH</h1>
+                    <div className="grid grid-cols-1 md:grid-cols-3 gap-8 w-full max-w-5xl mb-12">
+                      {[1, 2, 3].map(l => (
+                        <button key={l} onClick={() => { setLevel(l); setState(GameState.PLAYING); }} className="p-12 rounded-[2.5rem] bg-slate-950 border border-white/10 hover:border-cyan-500 transition-all shadow-2xl">
+                          <div className="text-5xl font-black mb-2">LV {l}</div>
+                          <div className="text-sm opacity-50 font-mono-tech">{l===1?'1x1~3x9':l===2?'4x1~6x9':'7x1~9x9'}</div>
+                        </button>
+                      ))}
+                    </div>
+                    <button onClick={() => setState(GameState.HISTORY)} className="text-cyan-400 font-bold uppercase tracking-widest text-xs hover:underline">Mission History</button>
+                  </div>
+                )}
+                {state === GameState.PLAYING && <GameEngine level={level} onEnd={handleEnd} onQuit={() => setState(GameState.MENU)} />}
+                {state === GameState.RESULT && (
+                  <div className="flex flex-col items-center justify-center h-full text-center">
+                    <div className="bg-slate-950/80 border-2 border-cyan-500 p-16 rounded-[3rem] shadow-2xl max-w-md w-full">
+                      <h2 className="text-5xl font-black text-cyan-400 mb-12 uppercase">Mission Briefing</h2>
+                      <div className="grid grid-cols-2 gap-8 mb-12">
+                        <div><div className="text-[10px] text-slate-500 uppercase font-bold mb-1">Score</div><div className="text-4xl font-black">{res.score}</div></div>
+                        <div><div className="text-[10px] text-slate-500 uppercase font-bold mb-1">Accuracy</div><div className="text-4xl font-black">{res.accuracy}%</div></div>
+                      </div>
+                      <button onClick={() => setState(GameState.MENU)} className="w-full py-5 bg-cyan-600 rounded-2xl font-bold hover:bg-cyan-500 transition-all shadow-lg">RETURN TO BASE</button>
+                    </div>
+                  </div>
+                )}
+                {state === GameState.HISTORY && (
+                  <div className="flex flex-col items-center h-full py-20 px-8 overflow-y-auto">
+                    <h2 className="text-5xl font-black text-cyan-400 mb-12 glow-text uppercase">Flight Logs</h2>
+                    <div className="grid grid-cols-1 md:grid-cols-3 gap-10 w-full max-w-6xl mb-16">
+                      {[1, 2, 3].map(lvl => (
+                        <div key={lvl} className="bg-slate-900/50 p-8 rounded-[2.5rem] border border-white/10">
+                          <h3 className="text-2xl font-black mb-6">LV {lvl} (Last 5)</h3>
+                          <div className="space-y-4">
+                            {history.filter(h => h.level === lvl).slice(0, 5).map((h, i) => (
+                              <div key={i} className="flex justify-between items-center p-4 bg-white/5 rounded-2xl border border-white/5">
+                                <div className="text-left"><div className="text-lg font-bold">{h.score} pts</div><div className="text-[10px] opacity-40">{new Date(h.timestamp).toLocaleDateString()}</div></div>
+                                <div className="text-2xl font-black text-cyan-400">{h.accuracy}%</div>
+                              </div>
+                            ))}
+                          </div>
+                        </div>
+                      ))}
+                    </div>
+                    <button onClick={() => setState(GameState.MENU)} className="px-14 py-5 bg-white/10 rounded-full font-bold hover:bg-white/20 transition-all">BACK</button>
+                  </div>
+                )}
+              </div>
+            </div>
+          );
+        };
+
+        ReactDOM.createRoot(document.getElementById('root')).render(<App />);
     </script>
 </body>
 </html>
